@@ -35,6 +35,7 @@ public:
     int getBaseOctave() const { return m_baseOctave; }
     int getNumOctaves() const { return m_numOctaves; }
     QColor getKeyPressedColor() const { return m_keyPressedColor; }
+    bool getGrabKeyboard() const { return m_grabKb; }
     void setInstrumentsFileName( const QString fileName );
     QString getInstrumentsFileName();
     void setInstrumentName( const QString name );
@@ -48,6 +49,7 @@ public slots:
     void setVelocity(int value) { m_velocity = value; }
     void setBaseOctave(int value) { m_baseOctave = value; }
     void setNumOctaves(int value) { m_numOctaves = value; }
+    void setGrabKeyboard(bool value) { m_grabKb = value; }
     void setKeyPressedColor(QColor value);
     void slotButtonClicked(QAbstractButton *button);
     void slotOpenInstrumentFile();
@@ -66,6 +68,7 @@ private:
     int m_velocity;
     int m_baseOctave;
     int m_numOctaves;
+    bool m_grabKb;
     QColor m_keyPressedColor;
 };
 
