@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>329</width>
-    <height>306</height>
+    <height>334</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -140,14 +140,21 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="5" column="0" colspan="4" >
+    <widget class="QCheckBox" name="chkGrabKb" >
+     <property name="text" >
+      <string>Grab keyboard</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" >
     <widget class="QLabel" name="lblKeyPressColor" >
      <property name="text" >
       <string>Key pressed color</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1" >
+   <item row="6" column="1" >
     <widget class="QLabel" name="lblColorName" >
      <property name="frameShape" >
       <enum>QFrame::StyledPanel</enum>
@@ -157,21 +164,21 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="2" colspan="2" >
+   <item row="6" column="2" colspan="2" >
     <widget class="QPushButton" name="btnColor" >
      <property name="text" >
       <string>color...</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0" >
+   <item row="7" column="0" >
     <widget class="QLabel" name="lblFileInstrument" >
      <property name="text" >
       <string>Instruments file</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="1" >
+   <item row="7" column="1" >
     <widget class="QLineEdit" name="txtFileInstrument" >
      <property name="minimumSize" >
       <size>
@@ -187,21 +194,21 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="2" colspan="2" >
+   <item row="7" column="2" colspan="2" >
     <widget class="QPushButton" name="btnInstrument" >
      <property name="text" >
       <string>load...</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QLabel" name="lblInstrument" >
      <property name="text" >
       <string>Instrument</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="1" colspan="3" >
+   <item row="8" column="1" colspan="3" >
     <widget class="QComboBox" name="cboInstrument" >
      <property name="minimumSize" >
       <size>
@@ -211,7 +218,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="4" >
+   <item row="9" column="0" colspan="4" >
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="standardButtons" >
       <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
